actualizacion gridd avance

--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -322,79 +322,79 @@
               (onRowPrepared)="onRowPreparedA($event)" (onCellPrepared)="onCellPreparedA($event)">
                   
                   <dxi-column dataField="concepto" caption="TOTAL" [width]="200" alignment="left"></dxi-column>
-                  <dxi-column dataField="sinCartera1a30" caption="Sin Cartera 1 a 30" [format]="separator" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="sinCarteraMas30" caption="Sin Cartera Más 30" [format]="separator" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="corriente" caption="Corriente" [format]="separator" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="de1a30" caption="1 A 30" [format]="separator" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="de31a60" caption="31 A 60" [format]="separator" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="de61a90" caption="61 A 90" [format]="separator" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="mas90" caption="MAS 90" [format]="separator" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="total" caption="Total" [format]="separator" width="100%" alignment="left"></dxi-column>
+                  <dxi-column dataField="sinCartera1a30" caption="Sin Cartera 1 a 30" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="sinCarteraMas30" caption="Sin Cartera Más 30" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="corriente" caption="Corriente" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="de1a30" caption="1 A 30" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="de31a60" caption="31 A 60" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="de61a90" caption="61 A 90" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="mas90" caption="MAS 90" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="total" caption="Total" [format]="separator" width="100%" alignment="right"></dxi-column>
               </dx-data-grid>
 
               <dx-data-grid  #grid2 id="gridContainer2" [dataSource]="avance2" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
               (onRowPrepared)="onRowPreparedA($event)">
                   <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
-                  <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="corriente" format="percent" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="de1a30" format="percent" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="de31a60" format="percent" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="de61a90" format="percent" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="mas90" format="percent" width="100%" alignment="left"></dxi-column>
-                  <dxi-column dataField="total" format="percent" width="100%" alignment="left"></dxi-column>
+                  <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="corriente" format="percent" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="de1a30" format="percent" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="de31a60" format="percent" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="de61a90" format="percent" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="mas90" format="percent" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="total" format="percent" width="100%" alignment="right"></dxi-column>
               </dx-data-grid>
 
               <dx-data-grid  #grid3 id="gridContainer3" [dataSource]="avance3" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
               (onRowPrepared)="onRowPreparedAT($event)">
                 <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
-                <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="corriente"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de1a30"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de31a60"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de61a90"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="mas90"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="total"  format="percent" width="100%" alignment="left"></dxi-column>
+                <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="corriente"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de1a30"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de31a60"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de61a90"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="mas90"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="total"  format="percent" width="100%" alignment="right"></dxi-column>
               </dx-data-grid>
 
               <dx-data-grid  #grid4 id="gridContainer4" [dataSource]="avance4" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
               (onRowPrepared)="onRowPreparedA($event)">
                 <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
-                <dxi-column dataField="sinCartera1a30" [format]="separator" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="sinCarteraMas30" [format]="separator" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="corriente" [format]="separator" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de1a30" [format]="separator" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de31a60" [format]="separator" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de61a90" [format]="separator" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="mas90" [format]="separator" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="total" [format]="separator" width="100%" alignment="left"></dxi-column>
+                <dxi-column dataField="sinCartera1a30" [format]="separator" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="sinCarteraMas30" [format]="separator" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="corriente" [format]="separator" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de1a30" [format]="separator" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de31a60" [format]="separator" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de61a90" [format]="separator" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="mas90" [format]="separator" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="total" [format]="separator" width="100%" alignment="right"></dxi-column>
               </dx-data-grid>
 
               <dx-data-grid  #grid5 id="gridContainer5" [dataSource]="avance5" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
               (onRowPrepared)="onRowPreparedA($event)">
                 <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
-                <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="corriente"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de1a30"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de31a60"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de61a90"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="mas90"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="total"  format="percent" width="100%" alignment="left"></dxi-column>
+                <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="corriente"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de1a30"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de31a60"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de61a90"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="mas90"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="total"  format="percent" width="100%" alignment="right"></dxi-column>
               </dx-data-grid>
 
               <dx-data-grid  #grid6 id="gridContainer6" [dataSource]="avance6" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
               (onRowPrepared)="onRowPreparedAT($event)">
                 <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
-                <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="corriente"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de1a30"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de31a60"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="de61a90"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="mas90"  format="percent" width="100%" alignment="left"></dxi-column>
-                <dxi-column dataField="total"  format="percent" width="100%" alignment="left"></dxi-column>
+                <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="corriente"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de1a30"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de31a60"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="de61a90"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="mas90"  format="percent" width="100%" alignment="right"></dxi-column>
+                <dxi-column dataField="total"  format="percent" width="100%" alignment="right"></dxi-column>
               </dx-data-grid>
             </dxi-item>
             </dx-tab-panel>
