actualizar grids cartera calculo de espacios

--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -169,6 +169,7 @@
                   <dxo-paging [pageSize]="100"></dxo-paging>
                   <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
                   <dxo-export [enabled]="true" fileName="CARTERA Inter Compañia" [customizeExcelCell]="customizeCAER"></dxo-export>
+                  <!-- <dxo-grouping #expand [autoExpandAll]="false" [allowCollapsing]="false"></dxo-grouping> -->
                     
                   <dxi-column caption="{{printValue+' - '+ printPeriodo}}">
                     <dxi-column dataField="cliente" caption="" [groupIndex]="0"></dxi-column>
