--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -323,8 +323,8 @@
               (onRowPrepared)="onRowPreparedA($event)" (onCellPrepared)="onCellPreparedA($event)">
                   
                   <dxi-column dataField="concepto" caption="TOTAL" [width]="200" alignment="left"></dxi-column>
-                  <dxi-column dataField="sinCartera1a30" caption="Sin Cartera 1 a 30" [format]="separator" width="100%" alignment="right"></dxi-column>
-                  <dxi-column dataField="sinCarteraMas30" caption="Sin Cartera Más 30" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="sinCartera1a30" caption="Sin Carta Cobro 1 a 30" [format]="separator" width="100%" alignment="right"></dxi-column>
+                  <dxi-column dataField="sinCarteraMas30" caption="Sin Carta Cobro Más 30" [format]="separator" width="100%" alignment="right"></dxi-column>
                   <dxi-column dataField="corriente" caption="Corriente" [format]="separator" width="100%" alignment="right"></dxi-column>
                   <dxi-column dataField="de1a30" caption="1 A 30" [format]="separator" width="100%" alignment="right"></dxi-column>
                   <dxi-column dataField="de31a60" caption="31 A 60" [format]="separator" width="100%" alignment="right"></dxi-column>
