actualizacion formato totales

--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -116,13 +116,13 @@
 
                   <dxo-summary>
                     <dxi-total-item column="cliente" [customizeText]="customizeDate"></dxi-total-item>
-                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="total" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="total" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
                   </dxo-summary>
 
                 </dx-data-grid>
@@ -152,11 +152,11 @@
                   <dxo-summary>
                     <!-- <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item> -->
                     <dxi-total-item column="cliente" [customizeText]="CustomizeSinCart"></dxi-total-item>
-                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
                   </dxo-summary>
 
                 </dx-data-grid>
@@ -188,13 +188,13 @@
                   <dxo-summary>
                     <dxi-total-item column="cliente"></dxi-total-item>
                     <dxi-total-item column="intercompania" [customizeText]="customizeIC"></dxi-total-item>
-                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="total" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="total" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
                   </dxo-summary>
 
                 </dx-data-grid>
@@ -228,11 +228,11 @@
                      <dxi-total-item column="intercompania" [customizeText]="customizeISC"></dxi-total-item>
                     <!--<dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item> -->
-                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
-                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
+                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="formatMoneda" ></dxi-total-item>
                   </dxo-summary>
 
                 </dx-data-grid>
@@ -246,13 +246,13 @@
                   <dxo-export [enabled]="true" fileName="Total carteras" [customizeExcelCell]="customizeCAER"></dxo-export>
                 
                     <dxi-column dataField="intercompania" caption=""></dxi-column>
-                    <dxi-column dataField="sinCarta" caption="Sin Carta Cobro" [format]="separator"></dxi-column>
-                    <dxi-column dataField="corriente" caption="Corriente" [format]="separator"></dxi-column>
-                    <dxi-column dataField="unoA30" caption="1 A 30" [format]="separator"></dxi-column>
-                    <dxi-column dataField="tre1A60" caption="31 A 60" [format]="separator"></dxi-column>
-                    <dxi-column dataField="ses0A90" caption="61 A 90" [format]="separator"></dxi-column>
-                    <dxi-column dataField="mas90" caption="MAS 90" [format]="separator"></dxi-column>
-                    <dxi-column dataField="total" caption="Total" [format]="separator"></dxi-column>
+                    <dxi-column dataField="sinCarta" caption="Sin Carta Cobro" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="corriente" caption="Corriente" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="unoA30" caption="1 A 30" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="tre1A60" caption="31 A 60" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="ses0A90" caption="61 A 90" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="mas90" caption="MAS 90" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="total" caption="Total" [format]="formatMoneda"></dxi-column>
                   
                     <!-- <dxo-summary>
                         <dxi-total-item column="1" [customizeText]="customizeTotal"></dxi-total-item>
