actualizacion export detalle

--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -466,7 +466,7 @@
 
             <dxo-group-panel [visible]="false"></dxo-group-panel>
             <dxo-grouping #expand [autoExpandAll]="false"></dxo-grouping>
-            <dxo-export [enabled]="true" fileName="Detalle"></dxo-export>
+            <!-- <dxo-export [enabled]="true" fileName="Detalle"></dxo-export> -->
             <dxo-paging [pageSize]="60"></dxo-paging>
             <dxo-sorting mode="none"></dxo-sorting>
 
