actualizacion ingresos detalle

--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -666,7 +666,7 @@
                         <!-- DICIEMBRE -->
                         <dxi-total-item showInColumn="dicPor" name="TotDiciembrePor" summaryType="custom" displayFormat="{0}" valueFormat="percent"></dxi-total-item>
                         <dxi-total-item showInColumn="dicPorP" name="TotDiciembrePorP" summaryType="custom" displayFormat="{0}" valueFormat="percent"></dxi-total-item>
-                        <dxi-total-item showInColumn="dicPorProy" name="TotDiciembrePorProy" summaryType="custom" displayFormat="{0}" valueFormat="$percent"></dxi-total-item>
+                        <dxi-total-item showInColumn="dicPorProy" name="TotDiciembrePorProy" summaryType="custom" displayFormat="{0}" valueFormat="percent"></dxi-total-item>
 
                     </dxo-summary>
 
